--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,9 @@
+@import '~antd/dist/antd.css';
+
+html {
+  font-size: 17px;
+}
+
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
@@ -5,9 +11,58 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  font-size: 1rem;
+  line-height: 1.5rem;
+
+}
+
+#root {
+  height: 100%;
 }
 
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
+}
+
+
+.code-box-demo {
+  text-align: center;
+}
+.ant-layout-header {
+  background: #fff;
+}
+
+.ant-layout-footer {
+  color: #fff;
+  background: #7dbcea;
+}
+[data-theme="dark"] .ant-layout-header {
+  background: #6aa0c7;
+}
+[data-theme="dark"] .ant-layout-footer {
+  background: #6aa0c7;
+}
+.ant-layout-footer {
+  line-height: 1.5;
+}
+.ant-layout-sider {
+  color: #fff;
+  line-height: 120px;
+  background: #3ba0e9;
+}
+[data-theme="dark"] .ant-layout-sider {
+  background: #3499ec;
+}
+.ant-layout-content {
+  min-height: 120px;
+  line-height: 120px;
+  background: #fff;
+  padding: 0 50px;
+}
+[data-theme="dark"] .ant-layout-content {
+  background: #107bcb;
+}
+> .code-box-demo > .ant-layout + .ant-layout {
+  margin-top: 48px;
 }
