--- a/src/index.css
+++ b/src/index.css
@@ -6,14 +6,12 @@ html {
 
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
+  font-family: "Spoqa Han Sans","맑은 고딕","Malgun Gothic","Apple SD Gothic Neo",sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   font-size: 1rem;
   line-height: 1.5rem;
-
+  color: #312f30;
 }
 
 #root {
@@ -56,7 +54,6 @@ code {
 }
 .ant-layout-content {
   min-height: 120px;
-  line-height: 120px;
   background: #fff;
   padding: 0 50px;
 }
