--- a/src/index.css
+++ b/src/index.css
@@ -1,7 +1,7 @@
 @import '~antd/dist/antd.css';
 
 html {
-  font-size: 17px;
+  font-size: 16px;
 }
 
 body {
@@ -62,5 +62,13 @@ code {
 }
 > .code-box-demo > .ant-layout + .ant-layout {
   margin-top: 48px;
+}
+
+.line-content {
+  width: 100%;
+  height: 1px;
+  visibility: visible;
+  border-bottom: 1px solid rgba(55, 53, 47, 0.16);
+  margin-bottom: 1em;
 }
 
