[profile] profile 수정

--- a/src/css/common.css
+++ b/src/css/common.css
@@ -67,3 +67,8 @@ h3 {
     background-color: #f1f1ef;
     padding: 0 10px 0 10px;
 }
+
+.career-skills {
+    font-size: .9rem;
+    color: #0c0c0c;
+}
